--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@react-native-community/async-storage": "^1.11.0",
     "delay": "^4.4.0",
     "expo": "~38.0.8",
+    "expo-blur": "^8.2.0",
+    "expo-linear-gradient": "^8.3.1",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
