--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-sectioned-multi-select": "^0.8.1",
+    "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5"
