--- a/app.json
+++ b/app.json
@@ -21,6 +21,9 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "android": {
+      "package": "com.ishanarya0.rnloadmore"
     }
   }
 }
