--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.11.0",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
     "delay": "^4.4.0",
     "expo": "~38.0.8",
     "expo-blur": "^8.2.0",
@@ -17,6 +20,8 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-gesture-handler": "^1.9.0",
+    "react-native-screens": "^2.15.0",
     "react-native-sectioned-multi-select": "^0.8.1",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.11.7",
